Implemented EncryptionService.cs

--- a/Authentication/appsettings.json
+++ b/Authentication/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Encryption": {
+    "SecretKey":"fio8Zufh7HA/aUNi5vcauY0E/WjegrLQV6Nvp3eD28M=",
+    "Iv": "2egpWIhsmbJw0Zzuy1XXWQ=="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
