--- a/Authentication/appsettings.json
+++ b/Authentication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "Encryption": {
     "SecretKey":"fio8Zufh7HA/aUNi5vcauY0E/WjegrLQV6Nvp3eD28M=",
     "Iv": "2egpWIhsmbJw0Zzuy1XXWQ=="
